--- a/weapp/stats/templates/member/repeat_buy_analysis.html
+++ b/weapp/stats/templates/member/repeat_buy_analysis.html
@@ -4,13 +4,7 @@
 
 {% block content-panel %}
 <style>
-#userAnalysis {
-	width: 200px;
-	height: 200px;
-	background-color: #FFF3F3; /* Can be set to transparent */
-    border: 5px #FFC6C8 solid;
-	-webkit-border-radius: 100px;
-}
+
 
 </style>
 <div class="xui-wepage-BIPage xui-rePurchaseAnalyzePage">
@@ -25,44 +19,41 @@
     <div class="xb-rightPanel pl10 pr10 pb30">
         <div class="xui-filter xui-filterPanel pl40" style="padding-top:22px;">
             会员状态：
-            <select name="" id="" class="xa-memberStateSelect">
+            <select name="" id="" class="xa-memberStateSelect xui-memberStateSelect">
                 <option value="all">全部</option>
                 <option value="1">已关注</option>
                 <option value="0">取消关注</option>
             </select>
         </div>
-        <div class="xui-charWrap" style="height:400px;">
+        <div class="xui-charWrap xui-userAnalysisBox" style="height:271px;">
             <div class="xui-i-title">
                 <div class="xui-i-block"></div>
-                <span class="ml5">
-                    用户分析
-                </span>
-                <span class="fr f12 xui-setConsumption pr">
-                    <span class="xui-setConsumptionBtn2 xa-setConsumptionBtn2 mr10 pr">条件设置</span>
-                    <div class="pa xui-consumptionBox xa-consumptionBox2 xui-hide">
-                        <div class="">
+                <span class="ml5">用户分析</span>
+                <div class="fr f12 xui-setCondition pr">
+                    <span class="xui-setConditionBtn xa-setConditionBtn mr10 pr">条件设置</span>
+                    <div class="pa xui-conditionBox xa-conditionBox xui-hide">
+                        <div class="lh26">
                             <span>购买次数：</span>
-                            <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionuserNum0">&nbsp;-&nbsp;
-                            <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionuserNum1">
+                            <input type="text" placeholder="" class="xa-buyNum xa-buyNum0" data-validate="require-int">&nbsp;-&nbsp;
+                            <input type="text" placeholder="" class="xa-buyNum xa-buyNum1" data-validate="require-int">
                             <div class="errorHint"></div>
                         </div>
-                        <div class="">
+                        <div class="lh26">
                             <span>消费金额：</span>
-                            <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionuserNum2">&nbsp;-&nbsp;
-                            <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionuserNum3">
+                            <input type="text" placeholder="" class="xa-userMoney xa-userMoney0" data-validate="require-float">&nbsp;-&nbsp;
+                            <input type="text" placeholder="" class="xa-userMoney xa-userMoney1" data-validate="require-float">
                             <div class="errorHint"></div>
                         </div>
-                        <div class="fr btn btn-primary m0 xui-confirm xa-confirmuserBtn">确认</div>
-                        <div class="cRed fr mr5 xui-hide xa-crossuserHint">格式不正确，请输入整数</div>
+                        <div class="fr xui-confirm xa-confirmuserBtn">确认</div>
+                        <div class="cRed fr mr5 xui-hide xa-errorConditionHint">请输入正确的次数区间</div>
                     </div>
-                </span>
+                </div>
             </div>
-            <div id="userAnalysis" class="pr" style="top:60px;text-align: center;margin:0 auto;vertical-align:middle;">
-                <span id="user_buy_count" style="font-size: 40px;line-height: 200px;color: red;">0</span>
-
+            <div id="userAnalysis" class="xui-userAnalysis">
+                <span id="user_buy_count" style="font-size: 42px;">0</span>
             </div>
-            <div  class="pr" style="top:60px;text-align: center;margin:0 auto;vertical-align:middle;font-size: 20px; font: bold;">
-                已圈养用户
+            <div  class="f14 xui-bold tc">
+                <span>已圈养用户</span>
             </div>
         </div>
         <div class="xui-charWrap fl" style="height:400px;">
@@ -80,25 +71,25 @@
                 <span class="fr f12 xui-setConsumption pr">
                     <span class="xui-setConsumptionBtn xa-setConsumptionBtn mr10 pr">设置消费总额</span>
                     <div class="pa xui-consumptionBox xa-consumptionBox xui-hide">
-                        <div class="">
+                        <div class="lh26">
                             <span>消费额区间1（元）：</span>
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum0">&nbsp;-&nbsp;
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum1">
                             <div class="errorHint"></div>
                         </div>
-                        <div class="">
+                        <div class="lh26">
                             <span>消费额区间2（元）：</span>
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum2">&nbsp;-&nbsp;
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum3">
                             <div class="errorHint"></div>
                         </div>
-                        <div class="">
+                        <div class="lh26">
                             <span>消费额区间3（元）：</span>
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum4">&nbsp;-&nbsp;
                             <input type="text" placeholder="请输入整数" class="xui-comsumptionNum xui-comsumptionNum5">
                             <div class="errorHint"></div>
                         </div>
-                        <div class="fr btn btn-primary m0 xui-confirm xa-confirmBtn">确认</div>
+                        <div class="fr xui-confirm xa-confirmBtn">确认</div>
                         <div class="cRed fr mr5 xui-hide xa-crossHint">格式不正确，请输入整数</div>
                         <!-- <div class="cRed fr mr5 xui-hide xa-crossHint">消费额区间需逐渐递增，不能交叉</div> -->
                     </div>
@@ -107,7 +98,6 @@
             <div id="rePurchaseAnalysis" class="pr" style="height:400px;top:-60px;"></div>
         </div>
     </div>
-     <div class="cb"></div>
 </div>
 {% endblock %}
 
@@ -156,26 +146,31 @@
                 },
                 scope: this,
                 success: function(data) {
-
-
-                    option = {
-                    // tooltip : {
-                    //     trigger: 'item',
-                    //     formatter: "{a} <br/>{b} : {c} ({d}%)"
-                    // },
-                        calculable : true,
-                        series : [
-                            {
-                                type:'pie',
-                                radius : '40%',
-                                center: ['50%', '60%'],
-                                data: data.series[0].data
-                            }
-                        ]
-                    };
-                    var theChart = echarts.init(document.getElementById('memberPurchaseScale'));
-                    theChart.setOption(option);
-
+                    var all = 0;
+                    for(var i in data.series[0].data){
+                        all += data.series[0].data[i].value;
+                    }
+                    if(all != 0){
+                        option = {
+                            // tooltip : {
+                            //     trigger: 'item',
+                            //     formatter: "{a} <br/>{b} : {c} ({d}%)"
+                            // },
+                            calculable : true,
+                            series : [
+                                {
+                                    type:'pie',
+                                    radius : '40%',
+                                    center: ['50%', '60%'],
+                                    data: data.series[0].data
+                                }
+                            ]
+                        };
+                        var theChart = echarts.init(document.getElementById('memberPurchaseScale'));
+                        theChart.setOption(option);
+                    }else{
+                        $('#memberPurchaseScale')[0].innerHTML ='<div class="xui-noData"></div>';
+                    }
 
                 },
                 error: function(resp) {
@@ -197,30 +192,37 @@
                 },
                 scope: this,
                 success: function(data) {
-                    option = {
-                        // tooltip : {
-                        //     trigger: 'item',
-                        //     formatter: "{a} <br/>{b} : {c} ({d}%)"
-                        // },
-                        calculable : true,
-                        series : [
-                            {
-                                type:'pie',
-                                radius : '40%',
-                                center: ['50%', '60%'],
-                                data: data.series[0].data
-                            }
-                        ]
-                    };
-                    var theChart = echarts.init(document.getElementById('rePurchaseAnalysis'));
-                    theChart.setOption(option);
+                    var all = 0;
+                    for(var i in data.series[0].data){
+                        all += data.series[0].data[i].value;
+                    }
+                    if( all != 0){
+                        option = {
+                            // tooltip : {
+                            //     trigger: 'item',
+                            //     formatter: "{a} <br/>{b} : {c} ({d}%)"
+                            // },
+                            calculable : true,
+                            series : [
+                                {
+                                    type:'pie',
+                                    radius : '40%',
+                                    center: ['50%', '60%'],
+                                    data: data.series[0].data
+                                }
+                            ]
+                        };
+                        var theChart = echarts.init(document.getElementById('rePurchaseAnalysis'));
+                        theChart.setOption(option);
+                    }else{
+                       $('#rePurchaseAnalysis')[0].innerHTML ='<div class="xui-noData"></div>';
+                    }
                 },
                 error: function(resp) {
                     alert('获取统计数据失败!');
                 }
             });
-        }
-
+        };
 
         rePurchaseAnalysis();
 
@@ -230,17 +232,7 @@
         var $comsumptionNum = $('.xui-comsumptionNum');
         var $crossHint = $('.xa-crossHint');
         $setConsumptionBtn.click(function() {
-            // $consumptionBox.show();
             $consumptionBox.toggleClass('xui-hide');
-        });
-        var $setConsumptionBtn2 = $('.xui-setConsumptionBtn2');
-        var $confirmuserBtn = $('.xa-confirmuserBtn');
-        var $consumptionBox2 = $('.xa-consumptionBox2');
-        var $comsumptionuserNum = $('.xui-comsumptionuserNum');
-        var $crossuserHint = $('.xa-crossuserHint');
-        $setConsumptionBtn2.click(function() {
-            // $consumptionBox.show();
-            $consumptionBox2.toggleClass('xui-hide');
         });
     
         console.log('$comsumptionNum',$comsumptionNum);
@@ -253,6 +245,7 @@
                 var value = Number(val.value);
                 // console.log('value',value);
                 var re =  /^[1-9]+[0-9]*]*$/;
+                // var re =  /^-?\d+$/g;
                 console.log('re.test(value)',re.test(value))
                 if(re.test(value) === false){
                     console.log("false~~~~~~~~~~~")
@@ -297,17 +290,25 @@
                 }       
             });
             if(is_checked){
-                $consumptionBox.hide();
+                $consumptionBox.addClass('xui-hide');
                 // console.log('search_pay_list',search_pay_list)
                 localStorage.setItem('k',search_pay_list)
                 rePurchaseAnalysis();
             }
         });
-        {#我不会写前端        #}
 
-        //复购会员
-        search_pay_m_list = [];
-        search_pay_times_list = [];
+        // 用户分析
+        var $setConditionBtn = $('.xa-setConditionBtn');
+        var $confirmuserBtn = $('.xa-confirmuserBtn');
+        var $conditionBox = $('.xa-conditionBox');
+        var $errorConditionHint = $('.xa-errorConditionHint');
+        $setConditionBtn.click(function() {
+            $conditionBox.toggleClass('xui-hide');
+        });
+
+        var search_pay_times_list = [];
+        var search_pay_m_list = [];
+
         function userAnalysis(){
             W.getApi().call({
                 app: 'stats',
@@ -327,49 +328,62 @@
                     alert('获取统计数据失败!');
                 }
             });
-        }
+        };
         userAnalysis();
-        $confirmuserBtn.click(function(){
-            var is_checked = true;
-            search_pay_m_list = [];
+
+        var $buyNum = $('.xa-buyNum');
+        var $userMoney = $('.xa-userMoney');
+        $confirmuserBtn.click(function(event) {
+            var is_buyTimeCondition = true;
+            var is_moneyCondition = true;
             search_pay_times_list = [];
-            $comsumptionuserNum.map(function(i,val){
-                console.log(i,val.value)
-                $('.xui-comsumptionuserNum'+i).css('border','1px solid #ccc');
-                var value = Number(val.value);
-
-                var re =  /^[1-9]+[0-9]*]*$/;
-                console.log('re.test(value)',re.test(value))
-                if(re.test(value) === false){
-
-                    $crossHint.text('格式不正确，请输入整数').show();
-                    $('.xui-comsumptionuserNum'+i).css('border','1px solid #DB4343');
-                    is_checked = false;
-                }
-                if(i==2 || i==3){
-                    search_pay_m_list.push(value);
+            search_pay_m_list = [];
+            var buyNum0 = Number($buyNum[0].value);
+            var buyNum1 = Number($buyNum[1].value);
+            var userMoney0 = Number($userMoney[0].value);
+            var userMoney1 = Number($userMoney[1].value);
+            $buyNum.map(function(val,i){
+                // console.log($(this),2222)
+                var thisVal = $(this)[0].value;
+                var siblingsVal = $(this).siblings('input')[0].value;
+                var thisNum = Number(thisVal);
+                if( thisVal == '' && siblingsVal == ''){
+                    is_buyTimeCondition =true;                    
+                }else if(thisVal != '' && siblingsVal != '' && buyNum0 < buyNum1){
+                    search_pay_times_list.push(thisNum);
+                    is_buyTimeCondition =true;
                 }else{
-                    search_pay_times_list.push(value);
+                    is_buyTimeCondition =false;
+                    $errorConditionHint.text('请输入正确的次数区间')
                 }
-
             });
-            console.log('search_pay_list>>>>',search_pay_list)
-            console.log('search_pay_times_list>>>>',search_pay_times_list)
-
-            if(search_pay_times_list[0]>search_pay_times_list[1]){
-                $crossuserHint.text('购买次数区间需逐渐递增，不能交叉').show();
-            }
-            if(search_pay_m_list[0]>search_pay_m_list[1]){
-                $crossuserHint.text('消费额区间需逐渐递增，不能交叉').show();
-            }
-
-            if(is_checked){
-                $consumptionBox.hide();
-{#                // console.log('search_pay_list',search_pay_list)#}
-{#                localStorage.setItem('k',search_pay_list)#}
+            $userMoney.map(function(val,i){
+                var thisVal = $(this)[0].value;
+                var siblingsVal = $(this).siblings('input')[0].value;
+                var thisNum = Number(thisVal);
+                var siblingsNum = Number(siblingsVal);
+                console.log('thisNum',thisNum,siblingsNum)
+                if( thisVal == '' && siblingsVal == ''){
+                    is_moneyCondition =true;
+                }else if(thisVal != '' && siblingsVal != '' && userMoney0 < userMoney1){
+                    search_pay_m_list.push(thisNum);
+                    is_moneyCondition =true;
+                }else{
+                    is_moneyCondition =false;
+                    $errorConditionHint.text('请输入正确的消费区间')
+                }
+            })
+            if( is_buyTimeCondition && is_moneyCondition){
+                $errorConditionHint.hide();
+                $conditionBox.addClass('xui-hide');
+                console.log('search_pay_times_list',search_pay_times_list)
+                console.log('search_pay_m_list',search_pay_m_list)
                 userAnalysis();
+            }else{
+                $errorConditionHint.show();
             }
         });
+
 
     });
 </script>
