[f_mall_8790][侯庭飞]商品评价导出

--- a/weapp/mall/templates/mall/editor/product_review_list.html
+++ b/weapp/mall/templates/mall/editor/product_review_list.html
@@ -44,6 +44,12 @@
 {% block js %}
 {% verbatim %}
 <script id="products-review" type="text/x-jquery-tmpl">
+    <div class="w500 pa pr30 div_export" style="top:10px;left:500px;line-height:30px;">
+ 
+
+        <a href="javascript:void(0);" class="btn fr btn-default xa-export mr20 " id="export_data_file">导出结果</a>
+        
+    </div>
     <table id="productReviewListTable" class="table table-bordered table-condensed xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
         ${data.stickied_count}
         <thead>
@@ -96,6 +102,92 @@ $(document).ready(function(){
         el: '.xui-productsPage'
     });
     view.render();
+
+    
+    $('.panel-body').delegate('.xa-export', 'click', function(event){
+        W.getApi().call({
+            app: 'member',
+            resource: 'export_is_download',
+            method: 'get',
+            args: {
+                woid: woid,
+                type: 2,
+            },
+            success: function(data) {
+                if (data["status"] === 1 && data["is_download"] === 0){
+                    W.showHint('error', '导出的文件尚未下载，请刷新页面进行下载！');
+                }
+                else if(data["status"] === 0 && data["is_download"] === 0){
+                    W.showHint('success', '文件正在导出，请刷新页面进行查看！');
+                    
+                }
+                else{
+                    var url ='';
+                    var filter_value = '';
+                    if (view.filter_value) {
+                        filter_value = view.filter_value;
+                    };
+                    var options = {
+                        el: '.panel-body',
+                        topic_id: '',
+                        type: 2,
+                        url: url,
+                        jobId:0,
+                        filter_value:filter_value,
+                        isAlreadyExport : true,
+                        timelinesOptions: {
+                            
+                        }
+                    }
+                    var customersView = new W.CustomersView(options);
+                }
+            },
+            error: function(response) {
+                W.showHint('error', '网络超时，导出中断，请重试！');
+            }
+        });
+        
+    });
+    
+    var table = $('div[data-ui-role="advanced-table"]').data('view');
+    
+
+    var export2data = {{export2data|safe}};
+    var woid = "{{ request.manager.id }}";
+    if(export2data["status"] ===1 && export2data["is_download"] ===0 ){
+        table.afterload = function(){
+            var options = {
+                el: '.div_export',
+                topic_id: '',
+                type: 2,
+                url: "",
+                jobId:export2data["id"],
+                isAlreadyExport : true,
+                timelinesOptions: {
+                }
+            }
+            var memberExportFileView = new W.dialog.member.ExportFileView(options);
+            memberExportFileView.finish();
+        };
+    }
+    else if(export2data["status"] ===0 && export2data["is_download"] ===0 ){
+        table.afterload = function(){
+
+            var jobId = export2data["id"];
+            var options = {
+                el: '.div_export',
+                topic_id: '',
+                type: 2,
+                url: "",
+                jobId:export2data["id"],
+                isAlreadyExport : true,
+                timelinesOptions: {
+                }
+            }
+            var memberExportFileView = new W.dialog.member.ExportFileView(options);
+            memberExportFileView.doExportAfterApi();
+        };
+    };
   })
 </script>
 {% endblock %}
