--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -764,7 +764,7 @@ $(document).ready(function() {
 					var options = {
 						el: '.panel-body',
 						topic_id: '',
-						type: '',
+						type: 0,
 						url: url,
 						jobId:0,
 						filter_value:filter_value,
