--- a/weapp/mall/templates/mall/editor/promotion/create_red_enevlop_record.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_red_enevlop_record.html
@@ -8,7 +8,7 @@
             <li>您当前所在位置</li>
             <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
             <li><a href="/mall2/integral_sale/get/">积分应用</a></li>
-            <li class="active">新建积分应用</li>
+            <li class="active">新建积分应用222</li>
         </ul>
     </div>
 
