--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -246,7 +246,7 @@
 				x : 'left',
 				data : [ '待发货', '已发货', '已完成' ]
 			},
-			calculable : true,
+			// calculable : true,
 			series : [ {
 				name : '订单趋势',
 				type : 'pie',
@@ -316,7 +316,7 @@
 					x : 'left',
 					data : [ '初次购买', '重复购买' ]
 				},
-				calculable : true,
+				// calculable : true,
 				series : [ {
 					name : '复购率',
 					type : 'pie',
@@ -398,7 +398,7 @@
 					x : 'left',
 					data : [ '直接关注购买', '推广扫码关注购买', '分享链接关注购买', '其他' ]
 				},
-				calculable : true,
+				// calculable : true,
 				series : [ {
 					name : '买家来源',
 					type : 'pie',
@@ -474,7 +474,7 @@
 					x : 'left',
 					data : [ '支付宝', '微信支付', '货到付款', '微众卡支付' ]
 				},
-				calculable : true,
+				// calculable : true,
 				series : [ {
 					name : '支付金额',
 					type : 'pie',
@@ -531,7 +531,7 @@
 				enterable : true,
 				formatter : formatter_func
 			},
-			calculable : true,
+			// calculable : true,
 			xAxis : [ {
 				axisLabel : {
 					textStyle : {
