【数据罗盘】当本地存储为空时，弹窗出现，input的val重置

--- a/weapp/stats/templates/member/repeat_buy_analysis.html
+++ b/weapp/stats/templates/member/repeat_buy_analysis.html
@@ -133,6 +133,8 @@
                     console.log("^^^^^^^^^",i,val)
                     $('.xui-comsumptionNum'+i).val(val);
                 });
+            }else{
+                $('.xa-consumptionBox input').val('');
             }
         }
         getLocalPayList();
@@ -146,6 +148,8 @@
                     console.log("^^^^^^^^^",i,val)
                     $('.xa-conditionBox input').eq(i).val(val);
                 });
+            }else{
+                $('.xa-conditionBox input').val('')
             }
         }
         getUserConditionList();
