--- a/weapp/stats/templates/member/repeat_buy_analysis.html
+++ b/weapp/stats/templates/member/repeat_buy_analysis.html
@@ -288,7 +288,7 @@
                 // console.log('require_int.test(value)',require_int.test(value),value,parseInt(val.value))
                 // 数据格式
                 if(!require_int.test(value)){
-                    console.log("false~~~~~~~~~~~")
+                    // console.log("false~~~~~~~~~~~")
                     $crossHint.text('格式不正确，请输入整数').show();
                     $('.xui-comsumptionNum'+i).css('border','1px solid #DB4343');
                     is_checked = false;
