--- a/card/templates/card/limit_rules.html
+++ b/card/templates/card/limit_rules.html
@@ -4,12 +4,12 @@
 <script type="text/javascript">
 	W.breadcrumb = [{
 		name: '微众卡',
-		href: '/outline/datas/'
+		href: '/card/ordinary_rules/'
 	}, {
-		name: '通用卡',
+		name: '限制卡',
 		href: '#'
 	}];
 
-	W.pageContentComponent = './card/ordinary_rules/OrdinaryRulesPage.react';
+	W.pageContentComponent = './card/limit_rules/LimitRulesPage.react';
 </script>
 {% endblock %}
