--- a/card/templates/card/ordinary_cards.html
+++ b/card/templates/card/ordinary_cards.html
@@ -4,12 +4,12 @@
 <script type="text/javascript">
 	W.breadcrumb = [{
 		name: '微众卡',
-		href: '/outline/datas/'
+		href: '/card/ordinary_cards/'
 	}, {
 		name: '通用卡',
 		href: '#'
 	}];
-
-	W.pageContentComponent = './card/ordinary_rules/OrdinaryCardPage.react';
+	W.weizoom_card_rule_id = "{{weizoom_card_rule_id}}"
+	W.pageContentComponent = './card/ordinary_cards/OrdinaryCardsPage.react';
 </script>
 {% endblock %}
