--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,8 @@
 
 		<script type="text/javascript" src="/static/js/system.js"></script>
 		<script type="text/javascript" src="/static/js/resource.js"></script>
-
+		<script type="text/javascript" src="/static/js/validate.js"></script>
+ 
 		{% block base_js %}{% endblock %}
 	</body>
 </html>
