--- a/weapp/mall/templates/mall/editor/product_review_list.html
+++ b/weapp/mall/templates/mall/editor/product_review_list.html
@@ -1,5 +1,11 @@
 {% extends "content_base_v2.html" %}
-
+{% block css %}
+<style type="text/css">
+.exportProgress_msg{
+    margin-right:0;
+}
+</style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-productsPage">
     <div class="relative">
@@ -44,34 +50,32 @@
 {% block js %}
 {% verbatim %}
 <script id="products-review" type="text/x-jquery-tmpl">
-    <div class="w500 pa pr30 div_export" style="top:10px;left:500px;line-height:30px;">
- 
-
-        <a href="javascript:void(0);" class="btn fr btn-default xa-export mr20 " id="export_data_file">导出结果</a>
+    <div class=" div_export clearfix xb-rightPanel pb10">
+        <a href="javascript:void(0);" class="btn fr btn-default xa-export" id="export_data_file">导出结果</a>
         
     </div>
     <table id="productReviewListTable" class="table table-bordered table-condensed xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
         ${data.stickied_count}
         <thead>
-          <th width="90">商品编码<th>
-          <th width="130" style="text-align:left;">商品名称<th>
-          <th width="95" style="text-align:left;">用户名<th>
-          <th width="150" >评价时间<th>
-          <th width="190" style="text-align:left;">评价内容<th>
-          <th width="65">商品评星<th>
-          <th width="100">状态<th>
-          <th width="80">操作<th>
+          <th width="90">商品编码</th>
+          <th width="130" style="text-align:left;">商品名称</th>
+          <th width="95" style="text-align:left;">用户名</th>
+          <th width="150" >评价时间</th>
+          <th width="190" style="text-align:left;">评价内容</th>
+          <th width="65">商品评星</th>
+          <th width="100">状态</th>
+          <th width="80">操作</th>
         </thead>
         <tbody id='product_review_list'>
         {{each(i, review) items}}
         <tr data-id="${review.id}">
-            <td width="90">${review.product_user_code}<td>
-            <td width="130" style="text-align:left;">${review.product_name}<td>
-            <td width="95" style="text-align:left;">{{html review.user_name}}<td>
-            <td width="150">${review.created_at}<td>
-            <td width="190" style="text-align:left;"><div style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width:190px;">${review.content}</div><td>
-            <td width="65">${review.product_score}星<td>
-            <td width="100">${review.status.name}<td>
+            <td width="90">${review.product_user_code}</td>
+            <td width="130" style="text-align:left;">${review.product_name}</td>
+            <td width="95" style="text-align:left;">{{html review.user_name}}</td>
+            <td width="150">${review.created_at}</td>
+            <td width="190" style="text-align:left;"><div style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width:190px;">${review.content}</div></td>
+            <td width="65">${review.product_score}星</td>
+            <td width="100">${review.status.name}</td>
             <td width="80">
                 {{if review.status.value === '0'}}
                     <a href="/mall2/product_review/?id=${review.id}">审核</a>
