--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -160,6 +160,54 @@ $(document).ready(function() {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
+
+	$('body').delegate('.xa-delete', 'click', function(event) {
+		var id = $(event.currentTarget).parents('tr').data('id')
+		W.requireConfirm({
+			$el: $el,
+			width: 420,
+			height: 55,
+			position: 'right-middle',
+			isTitle: false,
+			msg: '确定删除？',
+			confirm: function() {
+				W.getApi().call({
+					app: 'apps/shvote',
+					resource: 'shvote_registrators',
+					method: 'delete',
+					args: {
+						id: id
+					},
+					success: function(data) {
+						W.showHint('success', '删除成功！');
+						table.reload();
+					},
+					error: function(response) {
+						W.showHint('error', '删除失败，请稍后再试！');
+					}
+				});
+			}
+		});
+	});
+
+	$('body').delegate('.xa-review', 'click', function(event) {
+		var id = $(event.currentTarget).parents('tr').data('id')
+		W.getApi().call({
+			app: 'apps/shvote',
+			resource: 'shvote_registrators',
+			method: 'post',
+			args: {
+				id: id,
+			},
+			success: function(data) {
+				W.showHint('success', '审核成功！');
+				table.reload();
+			},
+			error: function(response) {
+				W.showHint('error', '审核失败，请稍后再试！');
+			}
+		});
+	});
 });
 </script>
 {% endblock %}
