--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -150,13 +150,11 @@ $(document).ready(function() {
 
 	$('.xa-search').click(function(event) {
 		var participant_name = $.trim($('[name="participant_name"]').val());
-		var startTime = $.trim($('[name="start_time"]').val());
-		var endTime = $.trim($('[name="end_time"]').val());
+		var participant_status = $.trim($('[name="status"]').val());
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			participant_name: participant_name,
-			start_time: startTime,
-			end_time: endTime
+			participant_status:participant_status,
 		}, {
 			emptyDataHint: '没有符合条件的数据'
 		});
