--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -154,7 +154,7 @@ $(document).ready(function() {
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			participant_name: participant_name,
-			participant_status:participant_status,
+			participant_status:participant_status
 		}, {
 			emptyDataHint: '没有符合条件的数据'
 		});
