增加分组组件

--- a/weapp/apps/customerized_apps/shvote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/workbench.html
@@ -194,7 +194,7 @@
               "description": description,
               "permission": permission,
               "rule": rule,
-              "groups": groups.join(',')
+              "groups": JSON.stringify(groups)
           };
           if (isCreateNewData) {
             var method = 'put';
