--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -153,9 +153,12 @@
 					{{if (field.type == 'badge')}}
 					<div class="propertyGroup_property_sliderField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label mr5 {{if field.validate}}star_show{{/if}}">${field.displayName}：</div>
-						<div class="propertyGroup_property_input pl5 xa-thirdPartyPlugin" data-plugin="apps_prize_keywordpane" data-field="${field.name}">
-							<div data-ui-role="apps-prize-keyword-pane" >
-                                <div class="xa-add-keyword-btn xui-add-keyword-btn">+ 添加</div>
+						<div class="propertyGroup_property_input pl5 xa-thirdPartyPlugin" data-plugin="${field.plugin}" data-field="${field.name}">
+							<div data-ui-role="${field.uirole}"
+							    data-maxlen="{{if field.maxlen }}${field.maxlen}{{else}}15{{/if}}"
+							    data-maxcount="{{if field.maxcount }}${field.maxcount}{{else}}5{{/if}}"
+							>
+                                <div class="xa-add-badge-btn xui-add-badge-btn">${field.btnName}</div>
 						    </div>
 
 						</div>
