--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -189,15 +189,9 @@ $(document).ready(function() {
                 $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
                 $submitButtonContainer.hide();
             },
-            error: function(resp) {
-                $('body').alert({
-                    isShow: true,
-                    isSlide: true,
-                    info: '参与失败，请稍后再试！',
-                    speed: 3000
-                });
+            error: function(data) {
+                wuiAlert(data.errMsg);
                 slag = true;
-                submitControl = false;
             }
         });
     }
