--- a/card/templates/card/limit_cards.html
+++ b/card/templates/card/limit_cards.html
@@ -4,12 +4,12 @@
 <script type="text/javascript">
 	W.breadcrumb = [{
 		name: '微众卡',
-		href: '/card/ordinary_rules/'
+		href: '/card/ordinary_cards/'
 	}, {
 		name: '限制卡',
 		href: '#'
 	}];
-	W.weizoom_card_rule_id = "{{weizoom_card_rule_id}}";
-	W.pageContentComponent = './card/limit_rules/LimitRulesPage.react';
+	W.weizoom_card_rule_id = "{{weizoom_card_rule_id}}"
+	W.pageContentComponent = './card/limit_cards/LimitCardsPage.react';
 </script>
 {% endblock %}
